--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,22 @@
 /* Your CSS styles here */
 body {
   font-family: "Arial", sans-serif;
-  background-color: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #ffffff, #a6e0b3);
   margin: 0;
 }
 
 header {
-  background-color: rgb(44, 225, 56);
+  background-color: rgb(45, 180, 81);
   color: white;
-  padding: 10px;
-  text-align: center;
+  padding: 5px;
+  text-align: left;
 }
 
 .logo-container {
   display: flex;
-  align-items: center;
-  justify-content: center; /* Center the content horizontally */
-  margin-bottom: 10px; /* Add margin for spacing */
+  align-items: left;
+  justify-content: left; /* Center the content horizontally */
+  margin-bottom: 5px; /* Add margin for spacing */
 }
 
 .logo {
@@ -35,22 +35,28 @@ header {
 }
 
 nav {
-  background-color: #333;
+  background: linear-gradient(to bottom, #b6efb2, #ffffff);
   display: flex;
   justify-content: space-around;
   padding: 10px;
+  font-family: "Open Sans";
 }
 
 nav a {
-  color: white;
+  color: #262a3b;
+  font-weight: bolder;
   text-decoration: none;
-  padding: 10px;
+  padding: 30px 20px;
   display: inline-block;
   transition: background-color 0.3s ease;
+  font-size: 20px;
+  background-color: #ff6733;
+  border-radius: 20px;
+  margin-right: 10px;
 }
 
 nav a:hover {
-  background-color: #555;
+  background-color: #44d07b;
 }
 main {
   display: flex;
@@ -62,7 +68,7 @@ main {
 .option-box {
   background-color: #fff;
   padding: 20px;
-  border-radius: 15px;
+  border-radius: 35px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
   margin: 20px;
   text-align: center;
@@ -84,7 +90,7 @@ main {
 }
 
 .option-box p {
-  color: #777;
+  color: #262a3b;
 }
 
 /* Your CSS styles here */
@@ -103,12 +109,13 @@ main {
 }
 
 .hero-text h2 {
-  font-size: 2em;
-  color: #4caf50;
+  font-size: 3em;
+  color: #262a3b;
+  font-weight: bolder;
 }
 
 .hero-text p {
-  color: #777;
+  color: #262a3b;
   margin-bottom: 20px;
 }
 
@@ -118,13 +125,14 @@ main {
 }
 
 #createNowButton {
-  background-color: #4caf50;
+  background-color: #ff6733;
   color: white;
   padding: 10px 20px;
   font-size: 1.2em;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease; /* Add transitions for background color and transform */
+  border-radius: 1em;
 }
 
 #createNowButton:hover {
